--- a/feedsidebar/chrome/locale/fr-FR/locale.properties
+++ b/feedsidebar/chrome/locale/fr-FR/locale.properties
@@ -12,5 +12,23 @@ feedbar.errors.noFeedsFound=Aucun flux n'a été trouvé.
 feedbar.errors.noFeedsFoundMore=Inscrivez-vous à un flux RSS avec le principe des marque-pages dynamiques de Firefox, afin de voir ses éléments dans le panneau latéral.
 feedbar.errors.noFeedsFoundLabel=Plus d'informations
 feedbar.errors.noFeedsFoundKey=P
+feedbar.errors.couldNotUnsubscribe=Erreur : Feed Sidebar n'a pas réussi à retirer le flux de vos marque-pages.
+feedbar.errors.parseError=Erreur d'analyse du flux.
+feedbar.errors.invalidUrl=Ce n'est pas l'URL d'un flux.
 feedbar.noTitle=Aucun titre
 feedbar.noContent=Aucun contenu
+feedbar.noSummary=Aucun résumé n'a été fourni.
+feedbar.warnOnTabs=Prévenir lors de l'ouverture de plusieurs onglets d'un ralentissement possible du navigateur
+feedbar.warnOnTabsMessage=Vous êtes sur le point d'ouvrir %S onglets. Ceci pourrait ralentir le navigateur lors du chargement des pages. Voulez-vous vraiment continuer ?
+feedbar.confirmOpenInTabs=Confirmation de l'ouverture
+feedbar.openConfirmText=Ouvrir les onglets
+feedbar.newItemTitle=Nouvel élément de flux
+feedbar.newItemsTitle=Nouveaux éléments de flux
+feedbar.newItemBody=Vous avez un nouvel élément de flux.
+feedbar.newItemsBody=Vous avez %S nouveaux éléments de flux.
+feedbar.workingOffline=Travailler hors connexion
+feedbar.permalink=Permalien
+feedbar.feedLink=Adresse du flux
+feedbar.siteLink=Adresse Web
+feedbar.publishedOn=Publié sur %S dans <a href="%S">%S</a>
+feedbar.previewHeader=Depuis <a href="%S">%S</a>
