--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -1,4 +1,4 @@
-extensions.feedbar@efinke.com.description=Toont de ongelezen berichten van uw Live Bladwijzers in de zijbalk.
+extensions.feedbar@efinke.com.description=Toont de ongelezen berichten van uw Livebladwijzers in de zijbalk.
 feedbar.time.pm=NM
 feedbar.time.am=VM
 feedbar.nextUpdate=Volgende verversing: %S
@@ -7,10 +7,28 @@ feedbar.errors.unavailable=Feed is niet beschikbaar
 feedbar.errors.emptyFeed=Lege feed
 feedbar.errors.invalidFeed=Feed heeft een ongeldig root element
 feedbar.errors.noChannel=Geen channel element op de verwachte plaats
-feedbar.errors.noChannelElements=Geen elementen in channel label
+feedbar.errors.noChannelElements=Geen elementen in channellabel
 feedbar.errors.noFeedsFound=Geen feeds gevonden.
-feedbar.errors.noFeedsFoundMore=Abonneer u op een feed via Live Bladwijzers in Firefox om de feedberichten in de zijbalk te zien.
+feedbar.errors.noFeedsFoundMore=Abonneer u op een feed via Livebladwijzers in Firefox om de feedberichten in de zijbalk te zien.
 feedbar.errors.noFeedsFoundLabel=Meer informatie
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=Fout: Feed Sidebar kan de feed niet uit uw bladwijzers verwijderen.
+feedbar.errors.parseError=Fout bij ontleden feed.
+feedbar.errors.invalidUrl=Geen feed-URL.
 feedbar.noTitle=Geen titel
 feedbar.noContent=Geen inhoud
+feedbar.noSummary=Geen samenvatting geleverd.
+feedbar.warnOnTabs=Mij waarschuwen wanneer het openen van meerdere tabbladen de browser kan vertragen
+feedbar.warnOnTabsMessage=U staat op het punt om %S tabbladen te openen. Dit kan de browser vertragen terwijl de pagina's worden geladen. Weet u zeker dat u wilt doorgaan?
+feedbar.confirmOpenInTabs=Openen bevestigen
+feedbar.openConfirmText=Tabbladen openen
+feedbar.newItemTitle=Nieuw feedbericht
+feedbar.newItemsTitle=Nieuwe feedberichten
+feedbar.newItemBody=U hebt een nieuw feedbericht
+feedbar.newItemsBody=U hebt %S nieuwe feedberichten
+feedbar.workingOffline=Offline werken
+feedbar.permalink=Permalink
+feedbar.feedLink=Feedkoppeling
+feedbar.siteLink=Sitekoppeling
+feedbar.publishedOn=Gepubliceerd op %S in <a href="%S">%S</a>
+feedbar.previewHeader=Van <a href="%S">%S</a>
