--- a/feedsidebar/chrome/locale/ru-RU/locale.properties
+++ b/feedsidebar/chrome/locale/ru-RU/locale.properties
@@ -1,4 +1,4 @@
-extensions.feedbar@efinke.com.description=Показ непрочитанных новостей из Лент новостей в боковой панели
+extensions.feedbar@efinke.com.description=Показ Лент новостей в боковой панели
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Следующее обновление: %S
@@ -12,5 +12,23 @@ feedbar.errors.noFeedsFound=Ленты не найдены.
 feedbar.errors.noFeedsFoundMore=Чтобы просматривать новости в боковой панели, вам необходимо подписаться на них, используя Закладки на ленты новостей
 feedbar.errors.noFeedsFoundLabel=Подробнее
 feedbar.errors.noFeedsFoundKey=о
+feedbar.errors.couldNotUnsubscribe=Ошибка: невозможно удалить Ленту новостей из закладок.
+feedbar.errors.parseError=Ошибка при обработке ленты.
+feedbar.errors.invalidUrl=URL не является адресом на Ленту новостей.
 feedbar.noTitle=Без заголовка
 feedbar.noContent=Без содержимого
+feedbar.noSummary=Нет краткого описания.
+feedbar.warnOnTabs=Предупреждать при открытии большого количества вкладок, которое может привести к замедлению работы браузера.
+feedbar.warnOnTabsMessage=Вы собираетесь открыть несколько (%S) вкладок. Это может затормозить работу браузера на время, требуемое для загрузки этих вкладок. Вы действительно хотите это сделать?
+feedbar.confirmOpenInTabs=Подтвердить открытие.
+feedbar.openConfirmText=Открыть вкладки
+feedbar.newItemTitle=Новая запись
+feedbar.newItemsTitle=Новые записи
+feedbar.newItemBody=У вас одна новая запись.
+feedbar.newItemsBody=У вас %S новых записей.
+feedbar.workingOffline=Автономная работа
+feedbar.permalink=Постоянный адрес
+feedbar.feedLink=Адрес ленты
+feedbar.siteLink=Адрес сайта
+feedbar.publishedOn=Опубликовано %S в <a href="%S">%S</a>
+feedbar.previewHeader=От <a href="%S">%S</a>
