--- a/feedsidebar/chrome/locale/zh-CN/locale.dtd
+++ b/feedsidebar/chrome/locale/zh-CN/locale.dtd
@@ -6,7 +6,7 @@
 <!ENTITY feedbar.preview.summary "简介">
 <!ENTITY feedbar.open "打开">
 <!ENTITY feedbar.openInTab "在新标签页打开">
-<!ENTITY feedbar.openAllInTabs "在标签页打开全部">
+<!ENTITY feedbar.openAllInTabs "在标签页打开全部项目">
 <!ENTITY feedbar.openUnreadInTabs "在新标签页打开未读项目">
 <!ENTITY feedbar.openFeedInTabs "在标签页打开订阅">
 <!ENTITY feedbar.openUnreadFeedInTabs "在新标签页打开未读订阅项目">
@@ -14,22 +14,22 @@
 <!ENTITY feedbar.markAsUnread "标记为未读">
 <!ENTITY feedbar.markFeedAsRead "标记订阅为已读">
 <!ENTITY feedbar.markFeedAsUnread "标记订阅为未读">
-<!ENTITY feedbar.markAllAsRead "标记全部为已读">
-<!ENTITY feedbar.markAllAsUnread "标记全部为未读">
+<!ENTITY feedbar.markAllAsRead "标记全部项目为已读">
+<!ENTITY feedbar.markAllAsUnread "标记全部项目为未读">
 <!ENTITY feedbar.reloadFeeds "更新订阅">
 <!ENTITY feedbar.stopFeedUpdate "取消更新订阅">
 <!ENTITY feedbar.minutes "分钟">
 <!ENTITY feedbar.hour "小时">
 <!ENTITY feedbar.hours "小时">
 <!ENTITY feedbar.showLastTooltip "按时间限制显示项目">
-<!ENTITY feedbar.showLastDaysPre "显示最近">
-<!ENTITY feedbar.showLastDaysPost "天">
-<!ENTITY feedbar.showLastWeeksPre "显示最近">
-<!ENTITY feedbar.showLastWeeksPost "个星期">
+<!ENTITY feedbar.showLastDaysPre "最近　">
+<!ENTITY feedbar.showLastDaysPost "　天">
+<!ENTITY feedbar.showLastWeeksPre "最近　">
+<!ENTITY feedbar.showLastWeeksPost "　星期">
 <!ENTITY feedbar.showAllItems "全部项目">
-<!ENTITY feedbar.showLastDay "显示上一天">
-<!ENTITY feedbar.showLastWeek "显示上一个星期">
-<!ENTITY feedbar.showLastMonth "显示上一个月">
+<!ENTITY feedbar.showLastDay "昨天">
+<!ENTITY feedbar.showLastWeek "上星期">
+<!ENTITY feedbar.showLastMonth "上月">
 <!ENTITY feedbar.copyTitle "复制标题">
 <!ENTITY feedbar.copyLink "复制链接">
 <!ENTITY feedbar.unsubscribe "未订阅">
@@ -42,8 +42,8 @@
 <!ENTITY feedbar.onlyShow2 "天的项目(0 显示全部)">
 <!ENTITY feedbar.24HourTime "使用 24 小时制">
 <!ENTITY feedbar.autoClose "当标记全部项目为已读后关闭侧栏">
-<!ENTITY feedbar.notifications "当找到新项目后显示弹出通知">
+<!ENTITY feedbar.notifications "当找到新项目后弹出通知">
 <!ENTITY feedbar.runInSidebar "仅当侧栏打开时检查更新">
-<!ENTITY feedbar.previewQuestion "当打开一个订阅项目时...">
+<!ENTITY feedbar.previewQuestion "当打开一个项目时...">
 <!ENTITY feedbar.previewAnswer1 "打开链接到的页面 (默认)">
-<!ENTITY feedbar.previewAnswer2 "显示该订阅的全部内容">
+<!ENTITY feedbar.previewAnswer2 "显示该订阅的全部描述">
