--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -1,8 +1,8 @@
 extensions.feedbar@efinke.com.description=在侧栏显示实时书签里的项目
 feedbar.time.pm=PM
 feedbar.time.am=AM
-feedbar.nextUpdate=下次更新时间：%S
-feedbar.checkingFeeds=正在
+feedbar.nextUpdate=下次更新: %S
+feedbar.checkingFeeds=正在检查更新...
 feedbar.errors.unavailable=没有新项目
 feedbar.errors.emptyFeed=空白订阅
 feedbar.errors.invalidFeed=订阅含有无效根元素
@@ -30,5 +30,5 @@ feedbar.workingOffline=脱机工作
 feedbar.permalink=永久链接
 feedbar.feedLink=订阅链接
 feedbar.siteLink=网站链接
-feedbar.publishedOn=在 <a href="%S">%S</a> 发布于 %S
+feedbar.publishedOn=<a href="%S">%S</a> 发布于 %S
 feedbar.previewHeader=来自 <a href="%S">%S</a>
