--- a/feedsidebar/chrome/locale/ja-JP/locale.properties
+++ b/feedsidebar/chrome/locale/ja-JP/locale.properties
@@ -2,7 +2,7 @@ extensions.feedbar@efinke.com.description=\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=\u6B21\u306E\u66F4\u65B0: %S
-feedbar.checkingFeeds=\u30D5\u30A3\u30FC\u30C9\u3092\u78BA\u8A8D\u4E2D... ( %S / %S )
+feedbar.checkingFeeds=\u30D5\u30A3\u30FC\u30C9\u3092\u78BA\u8A8D\u4E2D\u2026 (%S / %S)
 feedbar.errors.unavailable=\u30D5\u30A3\u30FC\u30C9\u306F\u5229\u7528\u3067\u304D\u307E\u305B\u3093
 feedbar.errors.emptyFeed=\u7A7A\u306E\u30D5\u30A3\u30FC\u30C9
 feedbar.errors.invalidFeed=\u7121\u52B9\u306A\u30D5\u30A3\u30FC\u30C9\u3067\u3059\u3002
@@ -18,7 +18,17 @@ feedbar.errors.invalidUrl=\u30D5\u30A3\u30FC\u30C9 URL \u3067\u306F\u3042\u308A\
 feedbar.noTitle=\u7121\u984C
 feedbar.noContent=\u5185\u5BB9\u306A\u3057
 feedbar.noSummary=\u8981\u7D04\u304C\u63D0\u4F9B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
-feedbar.warnOnTabs=\u30D6\u30E9\u30A6\u30B6\u3092\u4F4E\u901F\u5316\u3055\u305B\u308B\u6050\u308C\u304C\u3042\u308B\u591A\u6570\u306E\u30BF\u30D6\u3092\u958B\u304F\u5834\u5408\u306F\u8B66\u544A\u3059\u308B
+feedbar.warnOnTabs=\u30D6\u30E9\u30A6\u30B6\u3092\u4F4E\u901F\u5316\u3055\u305B\u308B\u6050\u308C\u304C\u3042\u308B\u591A\u6570\u306E\u30BF\u30D6\u3092\u958B\u304F\u969B\u306F\u8B66\u544A\u3059\u308B
 feedbar.warnOnTabsMessage=%S \u679A\u306E\u30BF\u30D6\u3092\u958B\u3053\u3046\u3068\u3057\u3066\u3044\u307E\u3059\u3002\u3053\u308C\u306F\u30DA\u30FC\u30B8\u3092\u8AAD\u307F\u8FBC\u3080\u9593\u3001\u30D6\u30E9\u30A6\u30B6\u3092\u4F4E\u901F\u5316\u3055\u305B\u308B\u6050\u308C\u304C\u3042\u308A\u307E\u3059\u3002\u672C\u5F53\u306B\u7D9A\u884C\u3057\u307E\u3059\u304B\uFF1F
 feedbar.confirmOpenInTabs=\u627F\u8A8D\u3057\u3066\u958B\u304F
 feedbar.openConfirmText=\u30BF\u30D6\u3092\u958B\u304F
+feedbar.newItemTitle=\u65B0\u7740\u30D5\u30A3\u30FC\u30C9\u9805\u76EE
+feedbar.newItemsTitle=\u65B0\u7740\u30D5\u30A3\u30FC\u30C9\u9805\u76EE
+feedbar.newItemBody=\u65B0\u3057\u3044\u30D5\u30A3\u30FC\u30C9\u9805\u76EE\u304C1\u500B\u3042\u308A\u307E\u3059\u3002
+feedbar.newItemsBody=\u65B0\u3057\u3044\u30D5\u30A3\u30FC\u30C9\u9805\u76EE\u304C%S\u500B\u3042\u308A\u307E\u3059\u3002
+feedbar.workingOffline=\u30AA\u30D5\u30E9\u30A4\u30F3\u4F5C\u696D\u4E2D
+feedbar.permalink=\u30D1\u30FC\u30DE\u30EA\u30F3\u30AF
+feedbar.feedLink=\u30D5\u30A3\u30FC\u30C9\u30EA\u30F3\u30AF
+feedbar.siteLink=\u30B5\u30A4\u30C8\u30EA\u30F3\u30AF
+feedbar.publishedOn=%S \u516C\u958B (<a href="%S">%S</a>)
+feedbar.previewHeader=<a href="%S">%S</a> \u3088\u308A
