--- a/feedsidebar/chrome/locale/fy-NL/locale.properties
+++ b/feedsidebar/chrome/locale/fy-NL/locale.properties
@@ -22,3 +22,13 @@ feedbar.warnOnTabs=Warskôgje my as it iepenjen fan mear ljepblêden de browser 
 feedbar.warnOnTabsMessage=Jo steane op it punt om %S ljepblêden te iepenjen. Dit kin de browser trager meitsje as de siden laden wurde. Wolle jo trochgean?
 feedbar.confirmOpenInTabs=Iepenjen befestigje
 feedbar.openConfirmText=Ljepblêden iepenje
+feedbar.newItemTitle=Nij feedûnderdiel
+feedbar.newItemsTitle=Nije feedûnderdielen
+feedbar.newItemBody=Jo hawwe ien nij feedûnderdiel.
+feedbar.newItemsBody=Jo hawwe %S nije feedûnderdielen.
+feedbar.workingOffline=Jo wurkje sûnder ferbining
+feedbar.permalink=Permalink
+feedbar.feedLink=Feedkeppeling
+feedbar.siteLink=Sidekeppeling
+feedbar.publishedOn=Publisearre op %S yn <a href="%S">%S</a>
+feedbar.previewHeader=Fan <a href="%S">%S</a>
