--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -1,4 +1,4 @@
-extensions.feedbar@efinke.com.description=Permette di mostrare gli elementi non letti dei segnalibri Live nella barra laterale
+extensions.feedbar@efinke.com.description=Permette di mostrare i segnalibri Live nella barra laterale
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Prossimo aggiornamento: %S
@@ -12,5 +12,23 @@ feedbar.errors.noFeedsFound=non è stato trovato alcun feed
 feedbar.errors.noFeedsFoundMore=Abbonarsi ad un feed tramite la funzione 'Segnalibri Live' di Firefox per visualizzarne gli elementi nella barra laterale
 feedbar.errors.noFeedsFoundLabel=Ulteriori informazioni
 feedbar.errors.noFeedsFoundKey=U
+feedbar.errors.couldNotUnsubscribe=Errore: impossibile eliminare il feed dai segnalibri
+feedbar.errors.parseError=Errore durante l'analisi del feed
+feedbar.errors.invalidUrl=URL del feed non valido
 feedbar.noTitle=Nessun titolo
 feedbar.noContent=Nessun contenuto
+feedbar.noSummary=Nessun sommario disponibile
+feedbar.warnOnTabs=Avvisa quando l'apertura di più schede potrebbe rallentare il browser
+feedbar.warnOnTabsMessage=Si stanno per aprire %S schede. Questo potrebbe comportare un rallentamento del browser durante il caricamento delle pagine. Procedere comunque?
+feedbar.confirmOpenInTabs=Conferma apertura
+feedbar.openConfirmText=Apri schede
+feedbar.newItemTitle=Nuovo elemento di feed
+feedbar.newItemsTitle=Nuovi elementi di feed
+feedbar.newItemBody=È stato rilevato un nuovo elemento
+feedbar.newItemsBody=Sono stati rilevati %S nuovi elementi
+feedbar.workingOffline=Non in linea
+feedbar.permalink=Permalink
+feedbar.feedLink=Link del feed
+feedbar.siteLink=Link del sito web
+feedbar.publishedOn=Pubblicato %S nel feed <a href="%S">%S</a>
+feedbar.previewHeader=Da <a href="%S">%S</a>
