--- a/feedsidebar/chrome/locale/fy-NL/locale.dtd
+++ b/feedsidebar/chrome/locale/fy-NL/locale.dtd
@@ -15,6 +15,7 @@
 <!ENTITY feedbar.markFeedAsRead "Markearje feed as lêzen">
 <!ENTITY feedbar.markFeedAsUnread "Markearje feed as net lêzen">
 <!ENTITY feedbar.markAllAsRead "Markearje alles as lêzen">
+<!ENTITY feedbar.markAllAsUnread "Markearje alles as net lêzen">
 <!ENTITY feedbar.reloadFeeds "Feed op &apos;e nij lade">
 <!ENTITY feedbar.stopFeedUpdate "Annulearje feedfernijing">
 <!ENTITY feedbar.minutes "minuten">
@@ -29,11 +30,20 @@
 <!ENTITY feedbar.showLastDay "Toan lêste dei">
 <!ENTITY feedbar.showLastWeek "Toan lêste wike">
 <!ENTITY feedbar.showLastMonth "Toan lêste moanne">
+<!ENTITY feedbar.copyTitle "Kopiearje titel">
+<!ENTITY feedbar.copyLink "Kopiearje keppeling">
 <!ENTITY feedbar.unsubscribe "Abonnemint opsizze">
 <!ENTITY feedbar.options "Opsjes">
 <!ENTITY feedbar.hideReadItems "Ferstop lêzen items">
 <!ENTITY feedbar.updateEvery1 "Fernij elke">
 <!ENTITY feedbar.updateEvery2 "minuten.">
+<!ENTITY feedbar.showAllItemsFull "Toan alle items, los fan de leeftyd">
 <!ENTITY feedbar.onlyShow1 "Toan allinnich items fan de lêste">
 <!ENTITY feedbar.onlyShow2 "dagen. (Jou 0 om alles te sjen)">
 <!ENTITY feedbar.24HourTime "Brûk 24-oeren tiid">
+<!ENTITY feedbar.autoClose "Slut automatysk de sidebalke as alle items as lêze markeard wurde.">
+<!ENTITY feedbar.notifications "Toan pop-up notifikaasje as der nije items binne.">
+<!ENTITY feedbar.runInSidebar "Kontrolearje allinne op fernijings as de sidebalke ipen is.">
+<!ENTITY feedbar.previewQuestion "As in feeditem iepenet wurdt...">
+<!ENTITY feedbar.previewAnswer1 "iepenje de keppele webside (standert).">
+<!ENTITY feedbar.previewAnswer2 "toan de folsleine itemomskriuwing yn it browserskerm.">
