--- a/feedsidebar/chrome/locale/sk-SK/locale.properties
+++ b/feedsidebar/chrome/locale/sk-SK/locale.properties
@@ -1,1 +1,34 @@
-extensions.feedbar@efinke.com.description=Displays the unread items from your Live Bookmarks in the sidebar.
+extensions.feedbar@efinke.com.description=Zobrazenie správ z Aktívnych záložiek v bočnom paneli.
+feedbar.time.pm=PM
+feedbar.time.am=AM
+feedbar.nextUpdate=Najbližšia aktualizácia: %S
+feedbar.checkingFeeds=Načítavanie %S z %S kanálov...
+feedbar.errors.unavailable=Kanál je nedostupný
+feedbar.errors.emptyFeed=Prázdny kanál
+feedbar.errors.invalidFeed=Neplatný kanál.
+feedbar.errors.noChannel=Nebol očakávaný prvok kanálu
+feedbar.errors.noChannelElements=Žiadne prvky v tagoch
+feedbar.errors.noFeedsFound=Neboli nájdené žiadne kanály.
+feedbar.errors.noFeedsFoundMore=Zapísať sa do kanálu s Aktívnymi záložkami Firefoxu pre zobrazenie správ v bočnom panely.
+feedbar.errors.noFeedsFoundLabel=Viac informácií
+feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=Chyba: Feed Sidebar nemôže odstrániť kanál zo záložiek.
+feedbar.errors.parseError=Chyba pri rozbore kanála.
+feedbar.errors.invalidUrl=Žiadna adresa URL kanálu.
+feedbar.noTitle=Žiadny nadpis
+feedbar.noContent=Žiadny obsah
+feedbar.noSummary=Nebol poskytnutý kontrolný súčet.
+feedbar.warnOnTabs=Upozorniť ma pri otváraní viacerých kariet, čo môže spôsobiť spomalenie prehliadača
+feedbar.warnOnTabsMessage=Chcete otvoriť %S kariet. Toto môže počas načítavania spomaliť váš prehliadač. Chcete pokračovať?
+feedbar.confirmOpenInTabs=Potvrdiť otvorenie
+feedbar.openConfirmText=Otvoriť karty
+feedbar.newItemTitle=Nová správa z kanálu
+feedbar.newItemsTitle=Nové správy z kanálu
+feedbar.newItemBody=Máte novú správu z kanálu.
+feedbar.newItemsBody=Máte %S nových správ z kanálu.
+feedbar.workingOffline=Práca offline
+feedbar.permalink=Permanentný odkaz
+feedbar.feedLink=Odkaz kanálu
+feedbar.siteLink=Odkaz stránky
+feedbar.publishedOn=Založený %S na <a href="%S">%S</a>
+feedbar.previewHeader=Od <a href="%S">%S</a>
