--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -30,5 +30,5 @@ feedbar.workingOffline=脱机工作
 feedbar.permalink=永久链接
 feedbar.feedLink=订阅链接
 feedbar.siteLink=网站链接
-feedbar.publishedOn=<a href="%S">%S</a> 发布于 %S
+feedbar.publishedOn=%S 发布于 <a href="%S">%S</a>
 feedbar.previewHeader=来自 <a href="%S">%S</a>
