--- a/feedsidebar/chrome/locale/de-DE/locale.dtd
+++ b/feedsidebar/chrome/locale/de-DE/locale.dtd
@@ -35,15 +35,15 @@
 <!ENTITY feedbar.unsubscribe "Abonnement beenden">
 <!ENTITY feedbar.options "Einstellungen">
 <!ENTITY feedbar.hideReadItems "Gelesene Beiträge ausblenden">
-<!ENTITY feedbar.updateEvery1 "Feed aller ">
+<!ENTITY feedbar.updateEvery1 "Feed alle ">
 <!ENTITY feedbar.updateEvery2 "Minuten aktualisieren">
 <!ENTITY feedbar.showAllItemsFull "Alle Einträge unabhängig vom Alter anzeigen">
 <!ENTITY feedbar.onlyShow1 "Nur die Beiträge der letzten">
 <!ENTITY feedbar.onlyShow2 "Tage anzeigen. (0 für alle Beiträge)">
-<!ENTITY feedbar.24HourTime "24-Stunden-Format benutzen">
+<!ENTITY feedbar.24HourTime "24-Stunden-Format verwenden">
 <!ENTITY feedbar.autoClose "Sidebar automatisch schließen, wenn alle Einträge als gelesen markiert werden">
 <!ENTITY feedbar.notifications "Benachrichtigungen über neue Einträge anzeigen">
-<!ENTITY feedbar.runInSidebar "Nur nach neuen Einträgen suchen, wenn die Sidebar geöffnet ist">
+<!ENTITY feedbar.runInSidebar "Nur bei geöffneter Sidebar nach neuen Einträgen suchen">
 <!ENTITY feedbar.previewQuestion "Beim Öffnen eines Eintrages...">
 <!ENTITY feedbar.previewAnswer1 "Die verlinkte Webseite öffnen (Standard)">
 <!ENTITY feedbar.previewAnswer2 "Die vollständige Beschreibung des Eintrags im Browserfenster anzeigen">
