--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -12,7 +12,7 @@ feedbar.errors.noFeedsFound=Keine Feeds gefunden
 feedbar.errors.noFeedsFoundMore=Fügen Sie einen Feed mittels Firefox als Dynamisches Lesezeichen hinzu und betrachten Sie diese in der Sidebar.
 feedbar.errors.noFeedsFoundLabel=Details
 feedbar.errors.noFeedsFoundKey=D
-feedbar.errors.couldNotUnsubscribe=Es trat ein Fehler auf: Feed Sidebar konnte den Feed nicht aus Ihren Lesezeichen entfernen
+feedbar.errors.couldNotUnsubscribe=Ein Fehler ist aufgetreten: Feed Sidebar konnte den Feed nicht aus Ihren Lesezeichen entfernen
 feedbar.errors.parseError=Fehler beim Auswerten des Feeds
 feedbar.errors.invalidUrl=Keine Feed-Adresse
 feedbar.noTitle=Kein Titel
