--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -58,4 +58,5 @@
 <!ENTITY feedbar.previewAnswer2 "Show the full item description in the browser window.">
 
 <!ENTITY feedbar.showAllItemsButtonLabel "All">
+<!ENTITY feedbar.showAll.tooltip "Enable to show both read and unread items.">
 <!ENTITY feedbar.alwaysOpenInNewTab "Always open items in new tabs">
