Better support for enclosures

--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -45,3 +45,5 @@ feedbar.publishedOn=Published on %S in <a href="%S">%S</a>
 # First %S is a URL
 # Second %S is a feed name
 feedbar.previewHeader=From <a href="%S">%S</a>
+
+feedbar.download=Download
